# keyrings.onepassword

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release-please.yml
src/keyrings/onepassword/: credential.py  keyring.py
